add context file and set connection string

--- a/Dexture/appsettings.json
+++ b/Dexture/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "DextureDb": "server=.;database=DextureDB;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
