add migratons add annotations for primary key

--- a/Dexture/appsettings.json
+++ b/Dexture/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionString": {
-    "DextureDb": "server=.;database=DextureDB;Integrated Security=true;"
+    "DextureDB": "server=.;database=DextureDB;Integrated Security=true;"
   },
   "Logging": {
     "LogLevel": {
