add future cultivation sucess

--- a/Dexture/appsettings.json
+++ b/Dexture/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
+  "Jwt": {
+    "key": "veryVerySecretKey",
+    "Issuer": "http://localhost:63939/"
+  },
   "AllowedHosts": "*"
 }
